# comet

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: components.rs  game.rs  lib.rs  main.rs  simulator.rs
src/components/: calculator.rs  footer.rs  playground.rs
static/: styles.css
