[package]
name = "comet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.8.4"
clap = { version = "3.2.8", features = ["derive"] }
rayon = "1.5.3"
rand = "0.8.5"
yew = "0.19"
wasm-logger = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "EventTarget",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
] }
js-sys = { version = "0.3" }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
gloo-worker = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
